hello-world/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hello.lanlabs.ch
      secretName: hello-world-tls-secrete
  rules:
    - host: hello.lanlabs.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-service
              port:
                name: http
